--- a/libs/angular-theme/lib/button/_button.scss
+++ b/libs/angular-theme/lib/button/_button.scss
@@ -3,9 +3,15 @@
 
 $button-radius-dense: 18px;
 $button-radius-base: 18px;
-$button-radius-large: 21px;
+$button-radius-large: 24px;
 
-$button-padding-large: 20px;
+$button-height-dense: 30px;
+$button-height-large: 44px;
+
+// $button-padding-dense-x: $uxg-spacing-3;
+// $button-padding-dense-y: 6px;
+// $button-padding-large-x: $uxg-spacing-4;
+// $button-padding-large-y: 10px;
 
 $button-icon-size-dense: 14px;
 $button-icon-size-base: 18px;
@@ -27,28 +33,30 @@ $mat-icon-button-size-dense: 30px;
     }
   }
 
-  &.mat-icon-button {
-    .mat-button-wrapper {
-      display: flex;
-      align-self: center;
-      margin: auto;
-    }
+  &.mat-mdc-icon-button {
+    // .mat-button-wrapper {
+    display: flex;
+    align-self: center;
+    margin: auto;
+    // }
   }
 }
 
 a,
 button {
   @include button-base($button-radius-base, $button-icon-size-base);
+  // padding: $uxg-spacing-2 $uxg-spacing-3;
 
-  &.mat-icon-button {
+  &.mat-mdc-icon-button {
     display: inline-flex;
     align-content: center;
     justify-content: center;
+    flex-wrap: wrap;
 
-    .mat-button-wrapper {
-      width: $button-icon-size-large;
-      height: $button-icon-size-large;
-    }
+    // .mat-button-wrapper, .mat-mdc-button-touch-target {
+    width: $button-icon-size-large;
+    height: $button-icon-size-large;
+    // }
 
     &:hover:not(.mat-button-disabled) .mat-button-focus-overlay {
       opacity: 0.04;
@@ -57,16 +65,21 @@ button {
 }
 
 button[dense],
-a[dense] {
-  @include button-base($button-radius-dense, $button-icon-size-dense);
-
-  &.mat-icon-button {
+a[dense],
+*[dense] button {
+  &.mdc-button.mat-mdc-button-base {
+    @include button-base($button-radius-dense, $button-icon-size-dense);
+    // padding: $button-padding-dense-y $button-padding-dense-x;
+    height: $button-height-dense;
+  }
+  &.mat-mdc-icon-button.mat-mdc-button-base {
     @include icon-size($mat-icon-button-size-dense);
+    padding: 0;
 
-    .mat-button-wrapper {
-      width: $button-icon-size-base;
-      height: $button-icon-size-base;
-    }
+    // .mat-button-wrapper, .mat-mdc-button-touch-target {
+    width: $button-icon-size-base;
+    height: $button-icon-size-base;
+    // }
 
     .mat-icon {
       @include icon-size($button-icon-size-base);
@@ -75,8 +88,11 @@ a[dense] {
 }
 
 button[large],
-a[large] {
-  @include button-base($button-radius-large, $button-icon-size-large);
-
-  padding: $uxg-spacing-0 $button-padding-large;
+a[large],
+*[large] button {
+  &.mdc-button.mat-mdc-button-base {
+    @include button-base($button-radius-large, $button-icon-size-large);
+    // padding: $button-padding-large-y $button-padding-large-x;
+    height: $button-height-large;
+  }
 }
