--- a/apps/angular-test-app/src/app/components/ui-elements-demo/ui-elements-demo.component.html
+++ b/apps/angular-test-app/src/app/components/ui-elements-demo/ui-elements-demo.component.html
@@ -128,10 +128,16 @@
     <button mat-icon-button aria-label="Example icon-button with a heart icon">
       <mat-icon>favorite</mat-icon>
     </button>
+    <button mat-icon-button color="neutral" aria-label="Example icon-button with a heart icon">
+      <mat-icon>favorite</mat-icon>
+    </button>
     <button mat-icon-button color="primary" aria-label="Example icon-button with a heart icon">
       <mat-icon>favorite</mat-icon>
     </button>
     <button mat-icon-button color="accent" aria-label="Example icon-button with a heart icon">
+      <mat-icon>favorite</mat-icon>
+    </button>
+    <button mat-icon-button color="gradient" aria-label="Example icon-button with a heart icon">
       <mat-icon>favorite</mat-icon>
     </button>
     <button mat-icon-button disabled aria-label="Example icon-button with a heart icon">
@@ -143,10 +149,16 @@
     <button mat-icon-button aria-label="Example icon-button with a heart icon" dense>
       <mat-icon>favorite</mat-icon>
     </button>
+    <button mat-icon-button color="neutral" aria-label="Example icon-button with a heart icon" dense>
+      <mat-icon>favorite</mat-icon>
+    </button>
     <button mat-icon-button color="primary" aria-label="Example icon-button with a heart icon" dense>
       <mat-icon>favorite</mat-icon>
     </button>
     <button mat-icon-button color="accent" aria-label="Example icon-button with a heart icon" dense>
+      <mat-icon>favorite</mat-icon>
+    </button>
+    <button mat-icon-button color="gradient" aria-label="Example icon-button with a heart icon" dense>
       <mat-icon>favorite</mat-icon>
     </button>
     <button mat-icon-button disabled aria-label="Example icon-button with a heart icon" dense>
@@ -448,7 +460,7 @@
   </div>
 
   <h5 class="uxg-h5">Input With Icon Button</h5>
-  <div class="example-row" dense>
+  <div class="example-row">
     <mat-form-field appearance="outline">
       <mat-label>Enter your password</mat-label>
       <input matInput [type]="hide ? 'password' : 'text'" />
