--- a/libs/angular-theme/lib/button/_button.scss
+++ b/libs/angular-theme/lib/button/_button.scss
@@ -23,8 +23,6 @@ $mat-icon-button-size-dense: 30px;
 
     .mat-icon {
       @include icon-size($icon-size);
-
-      padding-bottom: 2px;
     }
   }
 }
@@ -42,6 +40,10 @@ button {
     &:hover:not(.mat-button-disabled) .mat-button-focus-overlay {
       opacity: 0.04;
     }
+  }
+  .mdc-button__label {
+    display: flex;
+    align-items: center;
   }
 }
 
