--- a/libs/angular-components/changelog/src/changelog.component.scss
+++ b/libs/angular-components/changelog/src/changelog.component.scss
@@ -1,6 +1,5 @@
 @use 'sass:math';
-
-// @use '@angular/flex-layout/core/sass/layout-bp' as flex-layout;
+@use '@finastra/angular-theme' as fds;
 
 $bullet-space: 8%;
 $bullet-center: math.div($bullet-space, 2);
@@ -198,37 +197,37 @@ uxg-changelog {
     }
   }
 
-  // @include flex-layout.layout-bp(sm) {
-  //   .changelog-container {
-  //     margin: 24px;
-  //     @include changelog-layout('sm');
-  //   }
-  // }
+  @include fds.flex-breakpoint('sm') {
+    .changelog-container {
+      margin: 24px;
+      @include changelog-layout('sm');
+    }
+  }
 
-  // @include flex-layout.layout-bp(xs) {
-  //   .changelog-container {
-  //     margin: 24px 8px;
-  //     @include changelog-layout('xs');
-  //     .version  {
-  //       margin-top: 0;
-  //     }
-  //   }
+  @include fds.flex-breakpoint('xs') {
+    .changelog-container {
+      margin: 24px 8px;
+      @include changelog-layout('xs');
+      .version {
+        margin-top: 0;
+      }
+    }
 
-  //   .title {
-  //     padding: 2rem 1rem;
+    .title {
+      padding: 2rem 1rem;
 
-  //     .changelog-icon {
-  //       width: 90px;
-  //       height: 90px;
-  //     }
-  //   }
-  // }
+      .changelog-icon {
+        width: 90px;
+        height: 90px;
+      }
+    }
+  }
 
-  // @include flex-layout.layout-bp(lt-md) {
-  //   .title {
-  //     .creator {
-  //       max-width: 400px;
-  //     }
-  //   }
-  // }
+  @include fds.flex-breakpoint('lt-md') {
+    .title {
+      .creator {
+        max-width: 400px;
+      }
+    }
+  }
 }
