--- a/apps/angular-test-app/src/styles.scss
+++ b/apps/angular-test-app/src/styles.scss
@@ -14,6 +14,10 @@
 @use 'angular-components/filter/filter-tags/src/filter-tags.theme';
 @use 'angular-components/filter/filter-tree/src/filter-tree.theme';
 
+@use 'angular-components/status-steps/status-stepper.theme' as status-stepper;
+@use 'angular-components/status-steps/horizontal-status-stepper.theme' as horizontal-status-stepper;
+@use 'angular-components/status-steps/uxg-status-step.theme' as uxg-status-step;
+
 @include fds.uxg-core();
 
 @mixin app-theme($theme) {
@@ -31,7 +35,9 @@
   @include repeater.theme($theme);
   // @include changelog.theme($theme);
   @include video-thumbnail.theme($theme);
-  // @include status-stepper.theme($theme);
+  @include status-stepper.theme($theme);
+  @include horizontal-status-stepper.theme($theme);
+  @include uxg-status-step.theme($theme);
   @include account-card.theme($theme);
 }
 
